# bqplot-image-gl

./: .bumpversion.cfg  .check_extension.py  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES.md  MANIFEST.in  README.md  RELEASE.md  azure-pipelines.yml  azure-template.yml  bqplot_image_gl.json  jupyter-astroimage.json  pyproject.toml  release.sh  setup.py  tox.ini  zizmor.yml
.circleci/: config.yml
.github/: dependabot.yml  release.yml
.github/workflows/: ci.yml  ci_tests.yml  release.yml  update-changelog.yaml  update_baseline_images.yaml  update_galata_references.yaml
bqplot_image_gl/: __init__.py  _version.py  imagegl.py  interacts.py  linesgl.py  serialize.py  test_astroimage.py  viewlistener.py
bqplot_image_gl/tests/: test_imagegl.py
examples/: .validate-notebooks.py  basic.ipynb  brush-ellipse.ipynb  contour.ipynb  data.json  lines.ipynb  mouse.ipynb  viewlistener.ipynb
ipyastroimage/: __init__.py  astroimage.py
js/: README.md  package-lock.json  package.json  webpack.config.js
js/lib/: BrushEllipseSelector.js  BrushEllipseSelectorModel.js  BrushRectangleSelector.js  BrushRectangleSelectorModel.js  MouseInteraction.js  ViewListener.js  astroimage.js  bqplot-gl-loader-classic.js  bqplot-gl-loader.js  compat.js  contour.js  embed.js  extension.js  imagegl.js  index.js  labplugin.js  linesgl.js  serialize.js  utils.js  values.js
js/lib/examples/lines/: Line2.js  index.js
js/patches/: three+0.183.2.patch  three+0.97.0.patch
js/shaders/: image-fragment.glsl  image-vertex.glsl  scales-delta.glsl  scales-extra.glsl  scales-transform.glsl
tests/ui/: contour_test.py  helpers.py  image_test.py  lines_test.py  mouse_interaction_test.py  selection_test.py  view_listener_test.py
ui-tests/: README.md  jupyter_server_config.py  package.json
ui-tests/tests/: bqplot-image-gl.test.ts
ui-tests/tests/notebooks/: image.ipynb  image_rotate_update.ipynb
